@startuml

title __CSVRESULTS's Class Diagram__\n

  package com.anniefraz.dissertation.main.csvResults {
    class CSVResult {
        - iteration : int
        - populationSize : int
        - population : List<Patch>
        - offspring : List<Offspring>
        - neighbour : List<Neighbour>
        {static} - csvResultBuilder : CSVResultBuilder
        + CSVResult()
        + setIteration()
        + setPopulationSize()
        + setPopulation()
        + setOffspring()
        + setNeighbour()
        + setOffspringParent()
        + getIteration()
        + getPopulationSize()
        + getPopulation()
        + getOffspring()
        + getOffspringParent()
        + getNeighbour()
        {static} + getCsvResultBuilder()
    }
  }
  

  package com.anniefraz.dissertation.main.csvResults {
    class CSVResultBuilder {
        - iteration : int
        - populationSize : int
        - population : List<Patch>
        - offspring : List<Offspring>
        - neighbour : List<Neighbour>
        + CSVResultBuilder()
        + setIteration()
        + setPopulationSize()
        + setPopulation()
        + setOffspring()
        + setOffspringParent()
        + setNeighbour()
        + build()
    }
  }
  

  package com.anniefraz.dissertation.main.csvResults {
    class CSVResultFileWriter {
        {static} - LOG : Logger
        - csvWriter : CSVWriter
        + CSVResultFileWriter()
        + writeResult()
        + close()
    }
  }
  

  package com.anniefraz.dissertation.main.csvResults {
    interface CSVResultWriter {
        {abstract} + writeResult()
    }
  }
  

  CSVResult o-- Patch : offspringParent
  CSVResultBuilder o-- Patch : offspringParent
  CSVResultFileWriter -up-|> CSVResultWriter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
